--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,3 +1,8 @@
+p {
+  font-size: 2.5rem;
+  margin-left: 5%;
+  margin-top: -2%;;
+}
 .search-bar-wrapper {
   border-bottom: 1px solid #3333;
   height: 60px;
@@ -16,6 +21,7 @@
 }
 .image-wrapper {
   height: 50px;
+  display: flex;
 }
 
 .logo-image {
@@ -28,4 +34,9 @@
 
 .social {
   width: 50px;
+}
+
+.instagram-logo {
+  width: 150px;
+  height: 50px;
 }
